--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="icon" href="favicon.png" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="scripts/data.js" defer></script>
+    <script src="scripts/db.js" defer></script>
+    <script src="scripts/utils.js" defer></script>
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/itemModal.js" defer></script>
+    <script src="scripts/searchBar.js" defer></script>
+    <script src="scripts/toast.js" defer></script>
   </head>
   <body>
     <div class="app container">
@@ -81,7 +87,7 @@
 
             <div class="input-group">
               <label class="icon-input">
-                <img src="text.png" />
+                <img src="images/text.png" />
                 <input type="file" class="hidden" accept="image/*" />
               </label>
 
